Clean resources and release WCode v1.0.15